k8s/ingress-custom.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: impresslola-ingress
  namespace: impresslola
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: ""
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  rules:
  - host: impresslola89.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: impresslola-service
            port:
              number: 3000
